# pocket-pi

./: .gitignore  DESIGN.md  README.md  package-lock.json  package.json
examples/: hello.ts
host/: Cargo.toml
host/src/: guest.rs  main.rs  spec_generated.rs  surface.rs
sdk/: node-crypto.js  node-fs.js  node-path.js  prelude.js
spec/: codegen.mjs  spec.ts
stage/: Cargo.toml  gen-assets.mjs
stage/src/: assets.rs  capture.rs  cat-brain.js  fb.rs  mac_widget.rs  main.rs  session.rs  sprites.rs  text.rs
test/: e2e.mjs
