# pocket-cat — the native macOS desktop-pet host on the Pocket runtime family.
#
# RUNTIMES.md pattern, `stage` surface: the Rust core owns the native window,
# the software framebuffer, the clock and input (per-frame work stays native);
# a QuickJS guest (the cat harness "brain") owns policy — reactions, privacy
# judgement, commands. No Electron, no bun, no Python: one native binary.
[package]
name = "pocket-cat"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/pocket-stack/pocket-pi"
description = "Native macOS pixel desktop-pet: a cat that watches a low-fps mirror of what the agent observes and looks away from private content"

[[bin]]
name = "pocket-cat"
path = "src/main.rs"

[dependencies]
minifb = "0.27"
png = "0.17"
rquickjs = "0.12"
serde_json = "1"
anyhow = "1"
ureq = { version = "2", features = ["json"] }
fontdue = "0.9"

# Native transparent desktop-pet window (no window chrome) via AppKit.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSDate", "NSGeometry", "NSRunLoop", "NSThread"] }
objc2-app-kit = { version = "0.2", features = ["NSApplication", "NSWindow", "NSView", "NSResponder", "NSColor", "NSEvent", "NSScreen", "NSGraphics", "NSGraphicsContext", "NSRunningApplication", "NSWorkspace", "objc2-quartz-core"] }
objc2-quartz-core = { version = "0.2", features = ["CALayer"] }
core-graphics = "0.23"
foreign-types = "0.5"

[profile.release]
opt-level = "s"
lto = true
